k8s/synapse/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synapse
spec:
  selector:
    matchLabels:
      app: synapse
  serviceName: "synapse"
  replicas: 1
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
      - name: synapse
        resources:
          limits:
            memory: 4Gi
            cpu: 4
        image: matrixdotorg/synapse:v1.72.0
        ports:
        - containerPort: 8008
          name: synapse
        volumeMounts:
        - name: log-config
          mountPath: /etc/synapse/log
          readOnly: true
        - name: homeserver-yaml
          mountPath: /etc/synapse/homeserver
          readOnly: true
        - name: signing-key
          mountPath: /etc/synapse/keys
          readOnly: true
        - name: synapse-data
          mountPath: /var/lib/synapse
      volumes:
        - name: log-config
          configMap:
            name: vassast-org-log-config
        - name: homeserver-yaml
          secret:
            secretName: vassast-org-homeserver-yaml
        - name: signing-key
          secret:
            secretName: vassast-org-signing-key
      securityContext:
        runAsUser: 991
        runAsGroup: 991
        fsGroup: 991
  volumeClaimTemplates:
  - metadata:
      name: synapse-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
  labels:
    app: synapse
spec:
  ports:
  - port: 80
    targetPort: 8008
    name: synapse
  selector:
    app: synapse
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.org/client-max-body-size: "50m"
spec:
  rules:
  - host: matrix.vassast.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synapse
            port:
              number: 80
  - host: vassast.org
    http:
      paths:
      - path: /_matrix
        pathType: Prefix
        backend:
          service:
            name: synapse
            port:
              number: 80
      - path: /_synapse/client
        pathType: Prefix
        backend:
          service:
            name: synapse
            port:
              number: 80
      - path: /.well-known/
        pathType: Prefix
        backend:
          service:
            name: synapse
            port:
              number: 80
